# adtinc

./: .clang  .gitignore  Makefile  README.md
include/: adt.h  chain.h  dict.h  general.h  queue.h  u8.h  vec.h
lib/: CMakeLists.txt  chain.c  dict.c  queue.c  u8.c  vec.c
sample/: CMakeLists.txt  chain_sample.c  dict_sample.c  queue_sample.c  u8_sample.c  vec_sample.c
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test.cpp  test_chain.cpp  test_dict.cpp  test_u8.cpp  test_vec.cpp
